infra/vpcs/ohio/route-tables.json
{
  "RouteTables": [
      {
          "Associations": [
              {
                  "Main": false,
                  "RouteTableAssociationId": "rtbassoc-0cd747b8a07cb0046",
                  "RouteTableId": "rtb-04888a0a312c24412",
                  "SubnetId": "subnet-00a2184a947124ff2",
                  "AssociationState": {
                      "State": "associated"
                  }
              }
          ],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-04888a0a312c24412",
          "Routes": [
              {
                  "DestinationCidrBlock": "10.0.0.0/16",
                  "Origin": "CreateRoute",
                  "State": "active",
                  "VpcPeeringConnectionId": "pcx-0b526295668e141d7"
              },
              {
                  "DestinationCidrBlock": "20.0.0.0/16",
                  "GatewayId": "local",
                  "Origin": "CreateRouteTable",
                  "State": "active"
              },
              {
                  "DestinationCidrBlock": "0.0.0.0/0",
                  "GatewayId": "igw-0aa48cfce9d1f1faa",
                  "Origin": "CreateRoute",
                  "State": "active"
              }
          ],
          "Tags": [
              {
                  "Key": "Name",
                  "Value": "project-rtb-public"
              }
          ],
          "VpcId": "vpc-0c0f49f6864df9653",
          "OwnerId": "524073432557"
      },
      {
          "Associations": [
              {
                  "Main": false,
                  "RouteTableAssociationId": "rtbassoc-0bba3666d626d5772",
                  "RouteTableId": "rtb-03aca4c5c5432e247",
                  "SubnetId": "subnet-08414567391474445",
                  "AssociationState": {
                      "State": "associated"
                  }
              }
          ],
          "PropagatingVgws": [],
          "RouteTableId": "rtb-03aca4c5c5432e247",
          "Routes": [
              {
                  "DestinationCidrBlock": "10.0.0.0/16",
                  "Origin": "CreateRoute",
                  "State": "active",
                  "VpcPeeringConnectionId": "pcx-0b526295668e141d7"
              },
              {
                  "DestinationCidrBlock": "20.0.0.0/16",
                  "GatewayId": "local",
                  "Origin": "CreateRouteTable",
                  "State": "active"
              },
              {
                  "DestinationCidrBlock": "0.0.0.0/0",
                  "NatGatewayId": "nat-0fdc1a4a08969c75a",
                  "Origin": "CreateRoute",
                  "State": "active"
              }
          ],
          "Tags": [
              {
                  "Key": "Name",
                  "Value": "project-rtb-private1-us-east-2a"
              }
          ],
          "VpcId": "vpc-0c0f49f6864df9653",
          "OwnerId": "524073432557"
      }
  ]
}
